No wrap fix on code blocks

--- a/webroot/css/scss/site.scss
+++ b/webroot/css/scss/site.scss
@@ -6,6 +6,10 @@
 	box-sizing: border-box;
 }
 
+code {
+	white-space: nowrap;
+}
+
 body {
 	overflow-x: hidden;
 }
